package Models;

public class BlockedCell extends Cell{

    public BlockedCell(boolean life) {
        super(life);
    }
}
